RESOLVED FIXED18938
[GTK] Plugins not resized
https://bugs.webkit.org/show_bug.cgi?id=18938
Summary [GTK] Plugins not resized
Marco Barisione
Reported 2008-05-08 02:50:15 PDT
Plugin visited directly (e.g. inserting http://youtube.com/active_sharing.swf in the URL bar) are not resized when the window is resized.
Attachments
Fixes the issue for r33931 (1.14 KB, patch)
2008-05-20 07:23 PDT, marcoil
no flags
Fix for r34689 (1.19 KB, patch)
2008-06-20 09:48 PDT, marcoil
hausmann: review+
marcoil
Comment 1 2008-05-20 07:23:50 PDT
Created attachment 21255 [details] Fixes the issue for r33931 This patch ensures that changes in the geometry are sent to the plugin when the PluginView is the whole document (NP_FULL).
marcoil
Comment 2 2008-05-20 07:59:25 PDT
I forgot to mention that for the fix to work, the patches for Gtk present in bug #18935 have to be applied.
Alp Toker
Comment 3 2008-06-01 08:55:56 PDT
The issue does exist and the patch fixes GTK, but Anders remarked that this fix is wrong. Anders, could you elaborate?
Eric Seidel (no email)
Comment 4 2008-06-06 13:44:21 PDT
Hum... Adam Roben or someone who hacks on windows should take a look at this.
marcoil
Comment 5 2008-06-20 09:48:11 PDT
Created attachment 21856 [details] Fix for r34689 I've made a new patch that should fix the issue without affecting the Windows port. I've used XP_UNIX because the X11 Qt port has the same behavior.
Simon Hausmann
Comment 6 2008-07-26 06:23:18 PDT
Comment on attachment 21856 [details] Fix for r34689 Looks good to me. I would've thought that set should _always_ call setNPWindowRect, even in a windowed resize, but it seems that is not necessary. This patch is safe in any case I would say.
Mark Rowe (bdash)
Comment 7 2008-07-26 22:49:30 PDT
Landed in r35393.
Note You need to log in before you can comment on or make changes to this bug.