2008-07-26  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

Reviewed by Simon Hausmann.

        Bug 18938: [GTK] Plugins not resized
        https://bugs.webkit.org/show_bug.cgi?id=18938

        * plugins/PluginView.cpp:
        (WebCore::PluginView::setFrameGeometry): When viewing a full-page
        plugin in unix, geometry changes have to be passed to the plugin.

Canonical link: https://commits.webkit.org/27819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35393 268f45cc-cd09-0410-ab3c-d52691b4dbfc